Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    USIZE
    VEC
    VECN

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> declaracion PYC
Rule 5     instruccion -> asignacion PYC
Rule 6     instruccion -> funcion
Rule 7     declaracion -> LET MUT ID DOSP tipo IGUAL expresion
Rule 8     declaracion -> LET MUT ID IGUAL expresion
Rule 9     declaracion -> LET ID DOSP tipo IGUAL expresion
Rule 10    declaracion -> LET ID IGUAL expresion
Rule 11    asignacion -> ID IGUAL expresion
Rule 12    asignacion -> ID dimensiones_arreglo IGUAL expresion
Rule 13    tipo -> I64
Rule 14    tipo -> F64
Rule 15    tipo -> BOOL
Rule 16    tipo -> CHAR
Rule 17    tipo -> STRING
Rule 18    tipo -> STR
Rule 19    funcion -> FN ID PARA lista_parametros PARC LLAVEA instrucciones LLAVEC
Rule 20    funcion -> FN ID PARA lista_parametros PARC MENOS MAYORQUE tipo LLAVEA instrucciones LLAVEC
Rule 21    lista_parametros -> lista_parametros COMA parametro
Rule 22    lista_parametros -> parametro
Rule 23    parametro -> ID
Rule 24    dimensiones_arreglo -> CORA expresion CORC dimensiones_arreglo
Rule 25    dimensiones_arreglo -> CORA expresion CORC
Rule 26    expresion -> PARA expresion AS tipo PARC
Rule 27    expresion -> PARA expresion PARC
Rule 28    expresion -> ID CORA expresion CORC
Rule 29    expresion -> I64 DOSP DOSP POW PARA expresion COMA expresion PARC
Rule 30    expresion -> F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
Rule 31    expresion -> expresion MAS expresion
Rule 32    expresion -> expresion MENOS expresion
Rule 33    expresion -> expresion POR expresion
Rule 34    expresion -> expresion DIV expresion
Rule 35    expresion -> expresion MOD expresion
Rule 36    expresion -> MENOS expresion
Rule 37    expresion -> NOT expresion
Rule 38    expresion -> expresion AND expresion
Rule 39    expresion -> expresion OR expresion
Rule 40    expresion -> expresion IGUALIGUAL expresion
Rule 41    expresion -> expresion DIFERENTE expresion
Rule 42    expresion -> expresion MENORIGUAL expresion
Rule 43    expresion -> expresion MENORQUE expresion
Rule 44    expresion -> expresion MAYORIGUAL expresion
Rule 45    expresion -> expresion MAYORQUE expresion
Rule 46    expresion -> ENTERO
Rule 47    expresion -> DECIMAL
Rule 48    expresion -> CADENA

Terminals, with rules where they appear

AND                  : 38
AS                   : 26
BOOL                 : 15
CADENA               : 48
CHAR                 : 16
COMA                 : 21 29 30
CORA                 : 24 25 28
CORC                 : 24 25 28
DECIMAL              : 47
DIFERENTE            : 41
DIV                  : 34
DOSP                 : 7 9 29 29 30 30
ENTERO               : 46
F64                  : 14 30
FN                   : 19 20
I64                  : 13 29
ID                   : 7 8 9 10 11 12 19 20 23 28
IGUAL                : 7 8 9 10 11 12
IGUALIGUAL           : 40
LET                  : 7 8 9 10
LLAVEA               : 19 20
LLAVEC               : 19 20
MAS                  : 31
MAYORIGUAL           : 44
MAYORQUE             : 20 45
MENORIGUAL           : 42
MENORQUE             : 43
MENOS                : 20 32 36
MOD                  : 35
MUT                  : 7 8
NOT                  : 37
OR                   : 39
PARA                 : 19 20 26 27 29 30
PARC                 : 19 20 26 27 29 30
POR                  : 33
POW                  : 29
POWF                 : 30
PYC                  : 4 5
STR                  : 18
STRING               : 17
USIZE                : 
VEC                  : 
VECN                 : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 5
declaracion          : 4
dimensiones_arreglo  : 12 24
expresion            : 7 8 9 10 11 12 24 25 26 27 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45
funcion              : 6
inicio               : 0
instruccion          : 2 3
instrucciones        : 1 2 19 20
lista_parametros     : 19 20 21
parametro            : 21 22
tipo                 : 7 9 20 26

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . declaracion PYC
    (5) instruccion -> . asignacion PYC
    (6) instruccion -> . funcion
    (7) declaracion -> . LET MUT ID DOSP tipo IGUAL expresion
    (8) declaracion -> . LET MUT ID IGUAL expresion
    (9) declaracion -> . LET ID DOSP tipo IGUAL expresion
    (10) declaracion -> . LET ID IGUAL expresion
    (11) asignacion -> . ID IGUAL expresion
    (12) asignacion -> . ID dimensiones_arreglo IGUAL expresion
    (19) funcion -> . FN ID PARA lista_parametros PARC LLAVEA instrucciones LLAVEC
    (20) funcion -> . FN ID PARA lista_parametros PARC MENOS MAYORQUE tipo LLAVEA instrucciones LLAVEC

    LET             shift and go to state 7
    ID              shift and go to state 8
    FN              shift and go to state 9

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    funcion                        shift and go to state 6

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . declaracion PYC
    (5) instruccion -> . asignacion PYC
    (6) instruccion -> . funcion
    (7) declaracion -> . LET MUT ID DOSP tipo IGUAL expresion
    (8) declaracion -> . LET MUT ID IGUAL expresion
    (9) declaracion -> . LET ID DOSP tipo IGUAL expresion
    (10) declaracion -> . LET ID IGUAL expresion
    (11) asignacion -> . ID IGUAL expresion
    (12) asignacion -> . ID dimensiones_arreglo IGUAL expresion
    (19) funcion -> . FN ID PARA lista_parametros PARC LLAVEA instrucciones LLAVEC
    (20) funcion -> . FN ID PARA lista_parametros PARC MENOS MAYORQUE tipo LLAVEA instrucciones LLAVEC

    $end            reduce using rule 1 (inicio -> instrucciones .)
    LET             shift and go to state 7
    ID              shift and go to state 8
    FN              shift and go to state 9

    instruccion                    shift and go to state 10
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    funcion                        shift and go to state 6

state 3

    (3) instrucciones -> instruccion .

    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    FN              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> declaracion . PYC

    PYC             shift and go to state 11


state 5

    (5) instruccion -> asignacion . PYC

    PYC             shift and go to state 12


state 6

    (6) instruccion -> funcion .

    LET             reduce using rule 6 (instruccion -> funcion .)
    ID              reduce using rule 6 (instruccion -> funcion .)
    FN              reduce using rule 6 (instruccion -> funcion .)
    $end            reduce using rule 6 (instruccion -> funcion .)
    LLAVEC          reduce using rule 6 (instruccion -> funcion .)


state 7

    (7) declaracion -> LET . MUT ID DOSP tipo IGUAL expresion
    (8) declaracion -> LET . MUT ID IGUAL expresion
    (9) declaracion -> LET . ID DOSP tipo IGUAL expresion
    (10) declaracion -> LET . ID IGUAL expresion

    MUT             shift and go to state 13
    ID              shift and go to state 14


state 8

    (11) asignacion -> ID . IGUAL expresion
    (12) asignacion -> ID . dimensiones_arreglo IGUAL expresion
    (24) dimensiones_arreglo -> . CORA expresion CORC dimensiones_arreglo
    (25) dimensiones_arreglo -> . CORA expresion CORC

    IGUAL           shift and go to state 15
    CORA            shift and go to state 17

    dimensiones_arreglo            shift and go to state 16

state 9

    (19) funcion -> FN . ID PARA lista_parametros PARC LLAVEA instrucciones LLAVEC
    (20) funcion -> FN . ID PARA lista_parametros PARC MENOS MAYORQUE tipo LLAVEA instrucciones LLAVEC

    ID              shift and go to state 18


state 10

    (2) instrucciones -> instrucciones instruccion .

    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FN              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEC          reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 11

    (4) instruccion -> declaracion PYC .

    LET             reduce using rule 4 (instruccion -> declaracion PYC .)
    ID              reduce using rule 4 (instruccion -> declaracion PYC .)
    FN              reduce using rule 4 (instruccion -> declaracion PYC .)
    $end            reduce using rule 4 (instruccion -> declaracion PYC .)
    LLAVEC          reduce using rule 4 (instruccion -> declaracion PYC .)


state 12

    (5) instruccion -> asignacion PYC .

    LET             reduce using rule 5 (instruccion -> asignacion PYC .)
    ID              reduce using rule 5 (instruccion -> asignacion PYC .)
    FN              reduce using rule 5 (instruccion -> asignacion PYC .)
    $end            reduce using rule 5 (instruccion -> asignacion PYC .)
    LLAVEC          reduce using rule 5 (instruccion -> asignacion PYC .)


state 13

    (7) declaracion -> LET MUT . ID DOSP tipo IGUAL expresion
    (8) declaracion -> LET MUT . ID IGUAL expresion

    ID              shift and go to state 19


state 14

    (9) declaracion -> LET ID . DOSP tipo IGUAL expresion
    (10) declaracion -> LET ID . IGUAL expresion

    DOSP            shift and go to state 20
    IGUAL           shift and go to state 21


state 15

    (11) asignacion -> ID IGUAL . expresion
    (26) expresion -> . PARA expresion AS tipo PARC
    (27) expresion -> . PARA expresion PARC
    (28) expresion -> . ID CORA expresion CORC
    (29) expresion -> . I64 DOSP DOSP POW PARA expresion COMA expresion PARC
    (30) expresion -> . F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion POR expresion
    (34) expresion -> . expresion DIV expresion
    (35) expresion -> . expresion MOD expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion IGUALIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MENORQUE expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . ENTERO
    (47) expresion -> . DECIMAL
    (48) expresion -> . CADENA

    PARA            shift and go to state 24
    ID              shift and go to state 22
    I64             shift and go to state 25
    F64             shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31

    expresion                      shift and go to state 23

state 16

    (12) asignacion -> ID dimensiones_arreglo . IGUAL expresion

    IGUAL           shift and go to state 32


state 17

    (24) dimensiones_arreglo -> CORA . expresion CORC dimensiones_arreglo
    (25) dimensiones_arreglo -> CORA . expresion CORC
    (26) expresion -> . PARA expresion AS tipo PARC
    (27) expresion -> . PARA expresion PARC
    (28) expresion -> . ID CORA expresion CORC
    (29) expresion -> . I64 DOSP DOSP POW PARA expresion COMA expresion PARC
    (30) expresion -> . F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion POR expresion
    (34) expresion -> . expresion DIV expresion
    (35) expresion -> . expresion MOD expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion IGUALIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MENORQUE expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . ENTERO
    (47) expresion -> . DECIMAL
    (48) expresion -> . CADENA

    PARA            shift and go to state 24
    ID              shift and go to state 22
    I64             shift and go to state 25
    F64             shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31

    expresion                      shift and go to state 33

state 18

    (19) funcion -> FN ID . PARA lista_parametros PARC LLAVEA instrucciones LLAVEC
    (20) funcion -> FN ID . PARA lista_parametros PARC MENOS MAYORQUE tipo LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 34


state 19

    (7) declaracion -> LET MUT ID . DOSP tipo IGUAL expresion
    (8) declaracion -> LET MUT ID . IGUAL expresion

    DOSP            shift and go to state 35
    IGUAL           shift and go to state 36


state 20

    (9) declaracion -> LET ID DOSP . tipo IGUAL expresion
    (13) tipo -> . I64
    (14) tipo -> . F64
    (15) tipo -> . BOOL
    (16) tipo -> . CHAR
    (17) tipo -> . STRING
    (18) tipo -> . STR

    I64             shift and go to state 38
    F64             shift and go to state 39
    BOOL            shift and go to state 40
    CHAR            shift and go to state 41
    STRING          shift and go to state 42
    STR             shift and go to state 43

    tipo                           shift and go to state 37

state 21

    (10) declaracion -> LET ID IGUAL . expresion
    (26) expresion -> . PARA expresion AS tipo PARC
    (27) expresion -> . PARA expresion PARC
    (28) expresion -> . ID CORA expresion CORC
    (29) expresion -> . I64 DOSP DOSP POW PARA expresion COMA expresion PARC
    (30) expresion -> . F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion POR expresion
    (34) expresion -> . expresion DIV expresion
    (35) expresion -> . expresion MOD expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion IGUALIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MENORQUE expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . ENTERO
    (47) expresion -> . DECIMAL
    (48) expresion -> . CADENA

    PARA            shift and go to state 24
    ID              shift and go to state 22
    I64             shift and go to state 25
    F64             shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31

    expresion                      shift and go to state 44

state 22

    (28) expresion -> ID . CORA expresion CORC

    CORA            shift and go to state 45


state 23

    (11) asignacion -> ID IGUAL expresion .
    (31) expresion -> expresion . MAS expresion
    (32) expresion -> expresion . MENOS expresion
    (33) expresion -> expresion . POR expresion
    (34) expresion -> expresion . DIV expresion
    (35) expresion -> expresion . MOD expresion
    (38) expresion -> expresion . AND expresion
    (39) expresion -> expresion . OR expresion
    (40) expresion -> expresion . IGUALIGUAL expresion
    (41) expresion -> expresion . DIFERENTE expresion
    (42) expresion -> expresion . MENORIGUAL expresion
    (43) expresion -> expresion . MENORQUE expresion
    (44) expresion -> expresion . MAYORIGUAL expresion
    (45) expresion -> expresion . MAYORQUE expresion

    PYC             reduce using rule 11 (asignacion -> ID IGUAL expresion .)
    MAS             shift and go to state 46
    MENOS           shift and go to state 47
    POR             shift and go to state 48
    DIV             shift and go to state 49
    MOD             shift and go to state 50
    AND             shift and go to state 51
    OR              shift and go to state 52
    IGUALIGUAL      shift and go to state 53
    DIFERENTE       shift and go to state 54
    MENORIGUAL      shift and go to state 55
    MENORQUE        shift and go to state 56
    MAYORIGUAL      shift and go to state 57
    MAYORQUE        shift and go to state 58


state 24

    (26) expresion -> PARA . expresion AS tipo PARC
    (27) expresion -> PARA . expresion PARC
    (26) expresion -> . PARA expresion AS tipo PARC
    (27) expresion -> . PARA expresion PARC
    (28) expresion -> . ID CORA expresion CORC
    (29) expresion -> . I64 DOSP DOSP POW PARA expresion COMA expresion PARC
    (30) expresion -> . F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion POR expresion
    (34) expresion -> . expresion DIV expresion
    (35) expresion -> . expresion MOD expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion IGUALIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MENORQUE expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . ENTERO
    (47) expresion -> . DECIMAL
    (48) expresion -> . CADENA

    PARA            shift and go to state 24
    ID              shift and go to state 22
    I64             shift and go to state 25
    F64             shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31

    expresion                      shift and go to state 59

state 25

    (29) expresion -> I64 . DOSP DOSP POW PARA expresion COMA expresion PARC

    DOSP            shift and go to state 60


state 26

    (30) expresion -> F64 . DOSP DOSP POWF PARA expresion COMA expresion PARC

    DOSP            shift and go to state 61


state 27

    (36) expresion -> MENOS . expresion
    (26) expresion -> . PARA expresion AS tipo PARC
    (27) expresion -> . PARA expresion PARC
    (28) expresion -> . ID CORA expresion CORC
    (29) expresion -> . I64 DOSP DOSP POW PARA expresion COMA expresion PARC
    (30) expresion -> . F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion POR expresion
    (34) expresion -> . expresion DIV expresion
    (35) expresion -> . expresion MOD expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion IGUALIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MENORQUE expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . ENTERO
    (47) expresion -> . DECIMAL
    (48) expresion -> . CADENA

    PARA            shift and go to state 24
    ID              shift and go to state 22
    I64             shift and go to state 25
    F64             shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31

    expresion                      shift and go to state 62

state 28

    (37) expresion -> NOT . expresion
    (26) expresion -> . PARA expresion AS tipo PARC
    (27) expresion -> . PARA expresion PARC
    (28) expresion -> . ID CORA expresion CORC
    (29) expresion -> . I64 DOSP DOSP POW PARA expresion COMA expresion PARC
    (30) expresion -> . F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion POR expresion
    (34) expresion -> . expresion DIV expresion
    (35) expresion -> . expresion MOD expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion IGUALIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MENORQUE expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . ENTERO
    (47) expresion -> . DECIMAL
    (48) expresion -> . CADENA

    PARA            shift and go to state 24
    ID              shift and go to state 22
    I64             shift and go to state 25
    F64             shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31

    expresion                      shift and go to state 63

state 29

    (46) expresion -> ENTERO .

    MAS             reduce using rule 46 (expresion -> ENTERO .)
    MENOS           reduce using rule 46 (expresion -> ENTERO .)
    POR             reduce using rule 46 (expresion -> ENTERO .)
    DIV             reduce using rule 46 (expresion -> ENTERO .)
    MOD             reduce using rule 46 (expresion -> ENTERO .)
    AND             reduce using rule 46 (expresion -> ENTERO .)
    OR              reduce using rule 46 (expresion -> ENTERO .)
    IGUALIGUAL      reduce using rule 46 (expresion -> ENTERO .)
    DIFERENTE       reduce using rule 46 (expresion -> ENTERO .)
    MENORIGUAL      reduce using rule 46 (expresion -> ENTERO .)
    MENORQUE        reduce using rule 46 (expresion -> ENTERO .)
    MAYORIGUAL      reduce using rule 46 (expresion -> ENTERO .)
    MAYORQUE        reduce using rule 46 (expresion -> ENTERO .)
    PYC             reduce using rule 46 (expresion -> ENTERO .)
    CORC            reduce using rule 46 (expresion -> ENTERO .)
    AS              reduce using rule 46 (expresion -> ENTERO .)
    PARC            reduce using rule 46 (expresion -> ENTERO .)
    COMA            reduce using rule 46 (expresion -> ENTERO .)


state 30

    (47) expresion -> DECIMAL .

    MAS             reduce using rule 47 (expresion -> DECIMAL .)
    MENOS           reduce using rule 47 (expresion -> DECIMAL .)
    POR             reduce using rule 47 (expresion -> DECIMAL .)
    DIV             reduce using rule 47 (expresion -> DECIMAL .)
    MOD             reduce using rule 47 (expresion -> DECIMAL .)
    AND             reduce using rule 47 (expresion -> DECIMAL .)
    OR              reduce using rule 47 (expresion -> DECIMAL .)
    IGUALIGUAL      reduce using rule 47 (expresion -> DECIMAL .)
    DIFERENTE       reduce using rule 47 (expresion -> DECIMAL .)
    MENORIGUAL      reduce using rule 47 (expresion -> DECIMAL .)
    MENORQUE        reduce using rule 47 (expresion -> DECIMAL .)
    MAYORIGUAL      reduce using rule 47 (expresion -> DECIMAL .)
    MAYORQUE        reduce using rule 47 (expresion -> DECIMAL .)
    PYC             reduce using rule 47 (expresion -> DECIMAL .)
    CORC            reduce using rule 47 (expresion -> DECIMAL .)
    AS              reduce using rule 47 (expresion -> DECIMAL .)
    PARC            reduce using rule 47 (expresion -> DECIMAL .)
    COMA            reduce using rule 47 (expresion -> DECIMAL .)


state 31

    (48) expresion -> CADENA .

    MAS             reduce using rule 48 (expresion -> CADENA .)
    MENOS           reduce using rule 48 (expresion -> CADENA .)
    POR             reduce using rule 48 (expresion -> CADENA .)
    DIV             reduce using rule 48 (expresion -> CADENA .)
    MOD             reduce using rule 48 (expresion -> CADENA .)
    AND             reduce using rule 48 (expresion -> CADENA .)
    OR              reduce using rule 48 (expresion -> CADENA .)
    IGUALIGUAL      reduce using rule 48 (expresion -> CADENA .)
    DIFERENTE       reduce using rule 48 (expresion -> CADENA .)
    MENORIGUAL      reduce using rule 48 (expresion -> CADENA .)
    MENORQUE        reduce using rule 48 (expresion -> CADENA .)
    MAYORIGUAL      reduce using rule 48 (expresion -> CADENA .)
    MAYORQUE        reduce using rule 48 (expresion -> CADENA .)
    PYC             reduce using rule 48 (expresion -> CADENA .)
    CORC            reduce using rule 48 (expresion -> CADENA .)
    AS              reduce using rule 48 (expresion -> CADENA .)
    PARC            reduce using rule 48 (expresion -> CADENA .)
    COMA            reduce using rule 48 (expresion -> CADENA .)


state 32

    (12) asignacion -> ID dimensiones_arreglo IGUAL . expresion
    (26) expresion -> . PARA expresion AS tipo PARC
    (27) expresion -> . PARA expresion PARC
    (28) expresion -> . ID CORA expresion CORC
    (29) expresion -> . I64 DOSP DOSP POW PARA expresion COMA expresion PARC
    (30) expresion -> . F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion POR expresion
    (34) expresion -> . expresion DIV expresion
    (35) expresion -> . expresion MOD expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion IGUALIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MENORQUE expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . ENTERO
    (47) expresion -> . DECIMAL
    (48) expresion -> . CADENA

    PARA            shift and go to state 24
    ID              shift and go to state 22
    I64             shift and go to state 25
    F64             shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31

    expresion                      shift and go to state 64

state 33

    (24) dimensiones_arreglo -> CORA expresion . CORC dimensiones_arreglo
    (25) dimensiones_arreglo -> CORA expresion . CORC
    (31) expresion -> expresion . MAS expresion
    (32) expresion -> expresion . MENOS expresion
    (33) expresion -> expresion . POR expresion
    (34) expresion -> expresion . DIV expresion
    (35) expresion -> expresion . MOD expresion
    (38) expresion -> expresion . AND expresion
    (39) expresion -> expresion . OR expresion
    (40) expresion -> expresion . IGUALIGUAL expresion
    (41) expresion -> expresion . DIFERENTE expresion
    (42) expresion -> expresion . MENORIGUAL expresion
    (43) expresion -> expresion . MENORQUE expresion
    (44) expresion -> expresion . MAYORIGUAL expresion
    (45) expresion -> expresion . MAYORQUE expresion

    CORC            shift and go to state 65
    MAS             shift and go to state 46
    MENOS           shift and go to state 47
    POR             shift and go to state 48
    DIV             shift and go to state 49
    MOD             shift and go to state 50
    AND             shift and go to state 51
    OR              shift and go to state 52
    IGUALIGUAL      shift and go to state 53
    DIFERENTE       shift and go to state 54
    MENORIGUAL      shift and go to state 55
    MENORQUE        shift and go to state 56
    MAYORIGUAL      shift and go to state 57
    MAYORQUE        shift and go to state 58


state 34

    (19) funcion -> FN ID PARA . lista_parametros PARC LLAVEA instrucciones LLAVEC
    (20) funcion -> FN ID PARA . lista_parametros PARC MENOS MAYORQUE tipo LLAVEA instrucciones LLAVEC
    (21) lista_parametros -> . lista_parametros COMA parametro
    (22) lista_parametros -> . parametro
    (23) parametro -> . ID

    ID              shift and go to state 66

    lista_parametros               shift and go to state 67
    parametro                      shift and go to state 68

state 35

    (7) declaracion -> LET MUT ID DOSP . tipo IGUAL expresion
    (13) tipo -> . I64
    (14) tipo -> . F64
    (15) tipo -> . BOOL
    (16) tipo -> . CHAR
    (17) tipo -> . STRING
    (18) tipo -> . STR

    I64             shift and go to state 38
    F64             shift and go to state 39
    BOOL            shift and go to state 40
    CHAR            shift and go to state 41
    STRING          shift and go to state 42
    STR             shift and go to state 43

    tipo                           shift and go to state 69

state 36

    (8) declaracion -> LET MUT ID IGUAL . expresion
    (26) expresion -> . PARA expresion AS tipo PARC
    (27) expresion -> . PARA expresion PARC
    (28) expresion -> . ID CORA expresion CORC
    (29) expresion -> . I64 DOSP DOSP POW PARA expresion COMA expresion PARC
    (30) expresion -> . F64 DOSP DOSP POWF PARA expresion COMA expresion PARC
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion POR expresion
    (34) expresion -> . expresion DIV expresion
    (35) expresion -> . expresion MOD expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . expresion AND expresion
    (39) expresion -> . expresion OR expresion
    (40) expresion -> . expresion IGUALIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion MENORIGUAL expresion
    (43) expresion -> . expresion MENORQUE expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . ENTERO
    (47) expresion -> . DECIMAL
    (48) expresion -> . CADENA

    PARA            shift and go to state 24
    ID              shift and go to state 22
    I64             shift and go to state 25
    F64             shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CADENA          shift and go to state 31

    expresion                      shift and go to state 70

state 37

    (9) declaracion -> LET ID DOSP tipo . IGUAL expresion

    IGUAL           shift and go to state 71


state 38

    (13) tipo -> I64 .

    IGUAL           reduce using rule 13 (tipo -> I64 .)
    PARC            reduce using rule 13 (tipo -> I64 .)
    LLAVEA          reduce using rule 13 (tipo -> I64 .)


state 39

    (14) tipo -> F64 .

    IGUAL           reduce using rule 14 (tipo -> F64 .)
    PARC            reduce using rule 14 (tipo -> F64 .)
    LLAVEA          reduce using rule 14 (tipo -> F64 .)


state 40

    (15) tipo -> BOOL .

    IGUAL           reduce using rule 15 (tipo -> BOOL .)
    PARC            reduce using rule 15 (tipo -> BOOL .)
    LLAVEA          reduce using rule 15 (tipo -> BOOL .)


state 41

    (16) tipo -> CHAR .

    IGUAL           reduce using rule 16 (tipo -> CHAR .)
    PARC            reduce using rule 16 (tipo -> CHAR .)
    LLAVEA          reduce using rule 16 (tipo -> CHAR .)


state 42

    (17) tipo -> STRING .

    IGUAL           reduce using rule 17 (tipo -> STRING .)
    PARC            reduce using rule 17 (tipo -> STRING .)
    LLAVEA          reduce using rule 17 (tipo -> STRING .)


state 43

    (18) tipo -> STR .

    IGUAL           reduce using rule 18 (tipo -> STR .)
    PARC            reduce using rule 18 (tipo -> STR .)
    LLAVEA          reduce using rule 18 (tipo -> STR .)


state 44
